--- a/new folder/java/java6.html
+++ b/new folder/java/java6.html
@@ -4,23 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Counter </title>
+  <title>Events</title>
   <script src="java6.js" defer></script>
 </head>
 <body>
-    <label>
-        Num1
-        <input id="num1" type="text">
-        </label>
-        <br>
-        <label>
-            <br>
-
-            Num2
-            <input id="num2" type="text">
-            </label>
-        <p>result :</p>
-        <button> Sum </button>
-      
-        </body>
-        </html>
+  <label>
+    Number 1
+    <input id="num1" type="text">
+  </label>
+  <br>
+  <br>
+  <label>
+    Number 1
+    <input id="num2" type="text">
+  </label>
+  <p>
+    Result :
+  </p>
+  <button>Sum </button>
+</body>
+</html>
