some modification with index file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <nav>
                 <img src="koru.jpg" class="logo">
                 <ul>
-                    <li><a target="_blank" href="personal.html">Home</a></li>
+                    <li><a target="_blank" href="index.html">Home</a></li>
                     <li><a target="_blank" href="about.html">About</a></li>
                     <li><a target="_blank" href="form2.html">contact</a></li>
                     <li><a target="_blank" href="education.html">Education</a></li>
