--- a/index.html
+++ b/index.html
@@ -63,5 +63,9 @@
         </div>
         </div>
         </div>
+        <footer>
+            <p>Copy right : Hardeep1990/mission2/<br>
+            <a href="deepmatharu19@gmail.com">deepmatharu19@gmail.com</a></p>
+          </footer>
     </body>
 </html>
