some modification in index file

--- a/index.html
+++ b/index.html
@@ -40,12 +40,10 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure qui, maxime sequi nobis, odio corrupti
-                    deserunt eos at praesentium fuga in facilis eligendi, aut nesciunt temporibus illum! Doloremque,
-                    recusandae molestiae?</p>
-                <br>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure qui, maxime sequi nobis </p>
+              
                 <button onclick="changeColor()">About</button>
-                <br>
+        
                 <div class="container--tabs">
                     <section class="row">
                         <nav>
